Bug fix: calendar dates not aligned properly

--- a/src/app/dashboard/dashboard-calendar/dashboard-calendar.component.css
+++ b/src/app/dashboard/dashboard-calendar/dashboard-calendar.component.css
@@ -57,12 +57,19 @@
 }
 
 .calendar-day {
-    width: 50px;
-    height: 50px;
+    position: relative;
     line-height: 50px;
 }
 
-.calendar-day.completed-day {
+.calendar-circle {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    left: calc(50% - 25px);
+    top: calc(-50% + 25px);
+}
+
+.completed-day {
     border-radius: 50%;
     border: 1px solid #410275;;
 }
